# flask-blog

./: .gitignore  README.md  app.py  config.py  docker-compose.yml  main.py  pyproject.toml  view.py
backend/: Dockerfile  admin.py  app.py  boot.sh  config.py  main.py  makemigrations.sh  models.py  pyproject.toml  view.py
backend/migrations/: env.py
backend/migrations/versions/: 21e467f8bdf6_.py  3fa212821b1c_.py  3fa212821b1c_implement_many2many_posts_tags.py  4d4fdc352988_.py  4dbd14578bd2_unique_tag_name.py  5079b22c0c77_setup_not_null.py  998ad7d9e6ef_fix_association_tables_for_m2m.py  a8453c95a6a7_unique_tag_slug.py  b5f96f1a5fbe_m2m_tables_add_primary_key_and_ondelete_.py  f3d3e085cfe2_add_users_and_roles.py  f61ca0643354_many_to_many_add_uniqueconstraint_with_.py
backend/posts/: blueprint.py  forms.py  services.py
backend/posts/templates/posts/: create_post.html  edit_post.html  index.html  post_detail.html  tag_detail.html
backend/static/js/: tag_adder.js
backend/templates/: 404.html  about.html  base.html  index.html
backend/templates/security/: login_user.html
posts/: blueprint.py
templates/: about.html  base.html  index.html
